[FIX] remove rate as required field
