# swagger-output.json
@@ -306,6 +306,26 @@
         }
       }
     },
+    "/api/movies/all": {
+      "get": {
+        "tags": [
+          "Movie"
+        ],
+        "summary": "Get all movies for manager",
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/api/movies/": {
       "get": {
         "tags": [
@@ -356,10 +376,6 @@
                   "type": "string",
                   "example": "http://url"
                 },
-                "revenueSharePercent": {
-                  "type": "number",
-                  "example": 50
-                },
                 "category": {
                   "type": "array",
                   "example": [
@@ -404,10 +420,6 @@
                       }
                     }
                   }
-                },
-                "rate": {
-                  "type": "number",
-                  "example": 5
                 },
                 "showingStatus": {
                   "type": "string",
@@ -588,26 +600,6 @@
             "bearerAuth": []
           }
         ]
-      }
-    },
-    "/api/movies/all": {
-      "get": {
-        "tags": [
-          "Movie"
-        ],
-        "summary": "Get all movies for manager",
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
       }
     },
     "/api/movies/{id}/rate": {
